force-app/main/default/objects/Contact/fields/LeadSourceMostRecentDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceMostRecentDetail__c</fullName>
    <label>Lead Source Most Recent Detail</label>
    <type>TextArea</type>
</CustomField>