force-app/main/default/objects/Contact/fields/LinkedIn_Connections__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connections__c</fullName>
    <label>LinkedIn Connections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>