force-app/main/default/objects/Contact/fields/Marketing_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segmentation__c</fullName>
    <label>Marketing Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customizers</fullName>
            </value>
            <value>
                <fullName>Minimalists</fullName>
            </value>
            <value>
                <fullName>Optimizers</fullName>
            </value>
            <value>
                <fullName>Savers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>