force-app/main/default/objects/Contact/fields/Marketing_Segmentation_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segmentation_LastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Segmentation LastModifiedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>