force-app/main/default/objects/Contact/fields/MarketingDescription__c.field-meta.xml
<CustomField>
    <fullName>MarketingDescription__c</fullName>
    <label>Marketing Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>