force-app/main/default/objects/Contact/fields/Marketo_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Last_Activity_Date__c</fullName>
    <description>Date the last Marketo activity occurred.</description>
    <inlineHelpText>Date the last Marketo activity occurre.</inlineHelpText>
    <label>Marketo Last Activity Date</label>
    <type>Date</type>
</CustomField>