force-app/main/default/objects/Contact/fields/MarketSource_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>MarketSource_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>MarketSource Contact ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>