force-app/main/default/objects/Contact/fields/MarketSource_Rep__c.field-meta.xml
<CustomField>
    <fullName>MarketSource_Rep__c</fullName>
    <label>MarketSource Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>