force-app/main/default/objects/Contact/fields/MarketSource_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>MarketSource_Rep_Email__c</fullName>
    <label>MarketSource Rep Email</label>
    <type>Email</type>
</CustomField>