force-app/main/default/objects/Contact/fields/MarketSource_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>MarketSource_Rep_Phone__c</fullName>
    <label>MarketSource Rep Phone</label>
    <type>Phone</type>
</CustomField>