force-app/main/default/objects/Contact/fields/Merge_Winner__c.field-meta.xml
<CustomField>
    <fullName>Merge_Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be used to indicate which contact should be the &quot;Winner&quot; in a merge.  Allows a user to select the field in an excel file, we upload it, then write our demand tools job to use the value to select the winner in a merge scenario.</description>
    <label>Merge Winner</label>
    <type>Checkbox</type>
</CustomField>