force-app/main/default/objects/Contact/fields/Mkt_eCom_User__c.field-meta.xml
<CustomField>
    <fullName>Mkt_eCom_User__c</fullName>
    <formula>IF(INCLUDES(Contact_Role__c, &quot;eCommerce User&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt eCom User?</label>
    <type>Checkbox</type>
</CustomField>