force-app/main/default/objects/Contact/fields/Mkt_Influencer__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Influencer__c</fullName>
    <description>This formula field will display as TRUE if the Contact Role field has the value of Influencer selected.</description>
    <formula>IF(INCLUDES(Contact_Role__c, &quot;Influencer&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Influencer?</label>
    <type>Checkbox</type>
</CustomField>