force-app/main/default/objects/Contact/fields/Mkt_Other_Administrative_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Other_Administrative_Contact__c</fullName>
    <description>This formula field will display as TRUE if the Contact Role field has the value of Other Administrative Contact selected.</description>
    <formula>IF(INCLUDES(Contact_Role__c, &quot;Other Administrative Contact&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Other Administrative Contact?</label>
    <type>Checkbox</type>
</CustomField>