force-app/main/default/objects/Contact/fields/Mkt_Pays_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Pays_Invoices__c</fullName>
    <description>This formula field will display as TRUE if the Contact Role field has the value of Pays Invoices/Billing Contact selected.</description>
    <formula>IF(INCLUDES(Contact_Role__c, &quot;Pays Invoices/Billing Contact&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Pays Invoices?</label>
    <type>Checkbox</type>
</CustomField>