force-app/main/default/objects/Contact/fields/Mkt_Places_Orders__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Places_Orders__c</fullName>
    <description>This formula field will display as TRUE if the Contact Role field has the value of Places Orders/CS Contact selected.</description>
    <formula>IF(INCLUDES(Contact_Role__c, &quot;Places Orders/CS Contact&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Places Orders?</label>
    <type>Checkbox</type>
</CustomField>