force-app/main/default/objects/Contact/fields/Mkt_Receives_Order__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Receives_Order__c</fullName>
    <description>This formula field will display as TRUE if the Contact Role field has the value of Receives Order/Warehouse Contact selected.</description>
    <formula>IF(INCLUDES(Contact_Role__c, &quot;Receives Order/Warehouse Contact&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Receives Order?</label>
    <type>Checkbox</type>
</CustomField>