force-app/main/default/objects/Contact/fields/Mkt_Sales_Primary__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Sales_Primary__c</fullName>
    <description>This formula field will display as TRUE if the Contact Role field has the value of Sales Primary Contact selected.</description>
    <formula>IF(INCLUDES(Contact_Role__c,&quot;Sales Primary Contact&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Sales Primary?</label>
    <type>Checkbox</type>
</CustomField>