force-app/main/default/objects/Contact/fields/Mkt_Signs_Contract__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Signs_Contract__c</fullName>
    <description>This formula field will display as TRUE if the Contact Role field has the value of Signs Contract/Decision Maker selected.</description>
    <formula>IF(INCLUDES(Contact_Role__c, &quot;Signs Contract/Decision Maker&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Signs Contract?</label>
    <type>Checkbox</type>
</CustomField>