force-app/main/default/objects/Contact/fields/No_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>No_Contact_Role__c</fullName>
    <formula>ISBLANK( Contact_Role__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Contact Role</label>
    <type>Checkbox</type>
</CustomField>