force-app/main/default/objects/Contact/fields/Pager_Number__c.field-meta.xml
<CustomField>
    <fullName>Pager_Number__c</fullName>
    <label>Pager Number</label>
    <type>Phone</type>
</CustomField>