force-app/main/default/objects/Contact/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <label>Pain</label>
    <type>TextArea</type>
</CustomField>