force-app/main/default/objects/Contact/fields/Parent_Aging_0_and_Below__c.field-meta.xml
<CustomField>
    <fullName>Parent_Aging_0_and_Below__c</fullName>
    <label>Parent Aging 0 and Below</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>