force-app/main/default/objects/Contact/fields/Parent_Aging_16_thru_30__c.field-meta.xml
<CustomField>
    <fullName>Parent_Aging_16_thru_30__c</fullName>
    <label>Parent Aging 16 thru 30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>