force-app/main/default/objects/Contact/fields/Parent_Aging_1_thru_15__c.field-meta.xml
<CustomField>
    <fullName>Parent_Aging_1_thru_15__c</fullName>
    <label>Parent Aging 1 thru 15</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>