force-app/main/default/objects/Contact/fields/Parent_Aging_31_thru_45__c.field-meta.xml
<CustomField>
    <fullName>Parent_Aging_31_thru_45__c</fullName>
    <label>Parent Aging 31 thru 45</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>