force-app/main/default/objects/Contact/fields/PKG_Equipment_Interest_Mktg__c.field-meta.xml
<CustomField>
    <fullName>PKG_Equipment_Interest_Mktg__c</fullName>
    <description>Packaging Equipment Interest - Marketing</description>
    <label>PKG Equipment Interest Mktg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>