force-app/main/default/objects/Contact/fields/PRICE_NOTIF_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PRICE_NOTIF_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRICE-NOTIF-FLAG</label>
    <type>Checkbox</type>
</CustomField>