force-app/main/default/objects/Contact/fields/Primary_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Primary Sales Rep Object 
Not required on any layouts or record types 
Field is pre-populated (but editable) with the Primary Sales Rep tied to the related Account 
When an Account Primary Sales Rep field is changed, each related Contact that has that has the same Primary Sales Rep as the Account prior to the action is updated so that Opportunity.Primary_Sales_Rep_Name__c = Account.Primary_Sales_Rep_Name__c</description>
    <label>Primary Sales Rep Name</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>