force-app/main/default/objects/Contact/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADHESIVES</fullName>
            </value>
            <value>
                <fullName>AEROSPACE</fullName>
            </value>
            <value>
                <fullName>AMENITIES</fullName>
            </value>
            <value>
                <fullName>AQUEOUS MEDIA</fullName>
            </value>
            <value>
                <fullName>AQUEOUS PRINTERS</fullName>
            </value>
            <value>
                <fullName>AUTODESK - PRODUCT</fullName>
            </value>
            <value>
                <fullName>AUTODESK SUBSCRIPTION - NEW</fullName>
            </value>
            <value>
                <fullName>AUTODESK SUBSCRIPTION - RENEWAL</fullName>
            </value>
            <value>
                <fullName>BAGS</fullName>
            </value>
            <value>
                <fullName>BINDERY</fullName>
            </value>
            <value>
                <fullName>BLANKETS</fullName>
            </value>
            <value>
                <fullName>BOND &amp; WRITING</fullName>
            </value>
            <value>
                <fullName>CAN LINERS</fullName>
            </value>
            <value>
                <fullName>CAN LINERS-PRIVATE BRAND</fullName>
            </value>
            <value>
                <fullName>CANNABIS PACKAGING</fullName>
            </value>
            <value>
                <fullName>CARBONLESS</fullName>
            </value>
            <value>
                <fullName>CHEMICALS</fullName>
            </value>
            <value>
                <fullName>CHEMICALS-PRIVATE BRAND</fullName>
            </value>
            <value>
                <fullName>CHIPBOARD</fullName>
            </value>
            <value>
                <fullName>COATED BOARD - ROLLS</fullName>
            </value>
            <value>
                <fullName>COATED BOARD - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED DOMESTIC - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED IMPORT - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED - ROLLS</fullName>
            </value>
            <value>
                <fullName>COMPUTER &amp; LAPTOP</fullName>
            </value>
            <value>
                <fullName>CORRUGATED</fullName>
            </value>
            <value>
                <fullName>CUSHIONING</fullName>
            </value>
            <value>
                <fullName>DESIGN</fullName>
            </value>
            <value>
                <fullName>DIGITAL PAPER</fullName>
            </value>
            <value>
                <fullName>DIGITAL PROOFING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>