force-app/main/default/objects/Contact/fields/Reasons_for_Pain__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Pain__c</fullName>
    <label>Reasons for Pain</label>
    <type>TextArea</type>
</CustomField>