force-app/main/default/objects/Contact/fields/Receive_MAT_Summary__c.field-meta.xml
<CustomField>
    <fullName>Receive_MAT_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive MAT Summary</label>
    <type>Checkbox</type>
</CustomField>