force-app/main/default/objects/Contact/fields/REPORT_BOS__c.field-meta.xml
<CustomField>
    <fullName>REPORT_BOS__c</fullName>
    <label>REPORT-BOS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>