force-app/main/default/objects/Contact/fields/Role_Mktg__c.field-meta.xml
<CustomField>
    <fullName>Role_Mktg__c</fullName>
    <description>Role Marketing.</description>
    <label>Role Mktg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>