force-app/main/default/objects/Contact/fields/Sender_Last__c.field-meta.xml
<CustomField>
    <fullName>Sender_Last__c</fullName>
    <description>Contact field to replicate the Enrollment object functionality for easier sync with Marketo</description>
    <label>Sender Last</label>
    <length>40</length>
    <type>Text</type>
</CustomField>