force-app/main/default/objects/Contact/fields/Sender_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sender_Phone__c</fullName>
    <description>Contact field to replicate the Enrollment object functionality for easier sync with Marketo</description>
    <label>Sender Phone</label>
    <type>Phone</type>
</CustomField>