force-app/main/default/objects/Contact/fields/Sender_Title__c.field-meta.xml
<CustomField>
    <fullName>Sender_Title__c</fullName>
    <description>Contact field to replicate the Enrollment object functionality for easier sync with Marketo</description>
    <label>Sender Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>