force-app/main/default/objects/Contact/fields/Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicing Division</label>
    <referenceTo>Servicing_Division__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>