force-app/main/default/objects/Contact/fields/SHIP_TO_NUMBER_CAT__c.field-meta.xml
<CustomField>
    <fullName>SHIP_TO_NUMBER_CAT__c</fullName>
    <externalId>true</externalId>
    <label>SHIP_TO_NUMBER_CAT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>