force-app/main/default/objects/Contact/fields/SOC_Show_Price__c.field-meta.xml
<CustomField>
    <fullName>SOC_Show_Price__c</fullName>
    <inlineHelpText>SOC = Sales Order Confirmation</inlineHelpText>
    <label>SOC Show Price</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Decline_SOC__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>