force-app/main/default/objects/Contact/fields/SOC_Type__c.field-meta.xml
<CustomField>
    <fullName>SOC_Type__c</fullName>
    <inlineHelpText>SOC = Sales Order Confirmation</inlineHelpText>
    <label>SOC Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Decline_SOC__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>