force-app/main/default/objects/Contact/fields/Sync_with_Marketing_Automation__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Marketing_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workflows will set the value of this field on create and update</description>
    <inlineHelpText>If box is checked, this contact will be synced with our Marketing Automation tool</inlineHelpText>
    <label>Sync with Marketing Automation</label>
    <type>Checkbox</type>
</CustomField>