force-app/main/default/objects/Contact/fields/Temp_Field2__c.field-meta.xml
<CustomField>
    <fullName>Temp_Field2__c</fullName>
    <description>created for marketo sync</description>
    <label>Temp Field2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>