force-app/main/default/objects/Contact/fields/Temp_Field__c.field-meta.xml
<CustomField>
    <fullName>Temp_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for marketo sync.  use it to update all contacts in order to trigger all contacts to sync to marketo</description>
    <label>Temp Field</label>
    <type>Checkbox</type>
</CustomField>