force-app/main/default/objects/Contact/fields/Trunk_Number__c.field-meta.xml
<CustomField>
    <fullName>Trunk_Number__c</fullName>
    <description>Used for storing routing number not already included in the phone numbers on the Contact.</description>
    <label>Additional Phone</label>
    <type>Phone</type>
</CustomField>