force-app/main/default/objects/Contact/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor#</label>
    <length>18</length>
    <type>Text</type>
</CustomField>