force-app/main/default/objects/Contact/fields/Vendor_Division__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Division__c</fullName>
    <description>1/17/19 - Removed from page layouts because Vendors do not fit in the same Division groups that Veritiv has.  All data was copied and put in the Description field.</description>
    <label>Vendor Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Vendor_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Addison</fullName>
            </value>
            <value>
                <fullName>Albuquerque</fullName>
            </value>
            <value>
                <fullName>Anchorage</fullName>
            </value>
            <value>
                <fullName>Appleton</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Baton Rouge</fullName>
            </value>
            <value>
                <fullName>Billings</fullName>
            </value>
            <value>
                <fullName>Camden - Converting Only</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
            <value>
                <fullName>Cleveland</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Des Moines</fullName>
            </value>
            <value>
                <fullName>El Centro</fullName>
            </value>
            <value>
                <fullName>Fairbanks</fullName>
            </value>
            <value>
                <fullName>Fargo</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Huntington</fullName>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
            </value>
            <value>
                <fullName>Jacksonville</fullName>
            </value>
            <value>
                <fullName>Jessup</fullName>
            </value>
            <value>
                <fullName>Joliet</fullName>
            </value>
            <value>
                <fullName>LA - Fine Paper</fullName>
            </value>
            <value>
                <fullName>Lansing</fullName>
            </value>
            <value>
                <fullName>LA Supply Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>