force-app/main/default/objects/Contact/fields/Vendor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field needs to be populated in order to associate this contact with a Quote Line Item.  The value should match the account name.</inlineHelpText>
    <label>Vendor Lookup</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>That Vendor Contact does not exist or is inactive.</errorMessage>
        <filterItems>
            <field>$Source.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>If the contact is not available, please create the contact on the Vendor Account and then select the contact on this Quote Line Item.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vendor_Detail__c</referenceTo>
    <relationshipLabel>Vendor Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>