force-app/main/default/objects/Contact/fields/Vendor_Region__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Region__c</fullName>
    <description>1/17/19 - Removed from page layouts because Vendors do not fit in the same Division groups that Veritiv has.  All data was copied and put in the Description field.</description>
    <label>Vendor Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>SFDMA</fullName>
                <label>VOS-MA</label>
            </value>
            <value>
                <fullName>SFDNU</fullName>
                <label>VOS-NU</label>
            </value>
            <value>
                <fullName>SFDPC</fullName>
                <label>VOS-PC</label>
            </value>
            <value>
                <fullName>SFDSW</fullName>
                <label>VOS-SW</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>