force-app/main/default/objects/Contact/fields/WebCollect__c.field-meta.xml
<CustomField>
    <fullName>WebCollect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this box is checked, the contact should not be sent to Marketo.  These are contacts used by Credit &amp; Collections.</description>
    <inlineHelpText>Indicates if contact is from Webcollect</inlineHelpText>
    <label>WebCollect</label>
    <type>Checkbox</type>
</CustomField>