force-app/main/default/objects/Contact/recordTypes/Graphic_Communications_Contact.recordType-meta.xml
<RecordType>
    <fullName>Graphic_Communications_Contact</fullName>
    <active>false</active>
    <description>Graphic Communications Contact</description>
    <label>Graphic Communications - Contact</label>
</RecordType>