force-app/main/default/objects/Contact/recordTypes/Internal_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Internal_Contacts</fullName>
    <active>true</active>
    <description>Veritiv Employees - Contact Service Desk to have a new employee added</description>
    <label>Internal Contacts</label>
</RecordType>