force-app/main/default/objects/Contact/recordTypes/ThirdPartyContact.recordType-meta.xml
<RecordType>
    <fullName>ThirdPartyContact</fullName>
    <active>true</active>
    <label>Third Party Contact</label>
</RecordType>