force-app/main/default/objects/Contact/recordTypes/VendorContact.recordType-meta.xml
<RecordType>
    <fullName>VendorContact</fullName>
    <active>true</active>
    <description>Contact associated with a vendor</description>
    <label>Vendor Contact</label>
</RecordType>